<resources>
    <string name="app_name">IOS</string>
    <string name="sendConfirmCode">send</string>
    <string name="confirm">confirm</string>


    //menu options
    <string name="action_audit">Audit</string>
    <string name="action_report">Report</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit">exit</string>
    <string name="imageAvailable">"There is an image available right now , which action would you choose?"</string>
    <string name="retry">"retry"</string>
    <string name="preview">"preview"</string>
    <string name="delete">delete</string>
    <string name="language">language:</string>
    <string name="persian">persian</string>
    <string name="english">english</string>
    <string name="regions">Regions</string>
    <string name="dismiss">dismiss</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="date">date</string>
    <string name="exitAudit">Do you want to quit audit process of this site?</string>
    <string name="scanner_not_supported">Barcode scanner is not supported in this device</string>
    <string name="BarcodeContent">Barcode content</string>
    <string name="irancell_password">irancell password</string>
    <string name="irancell_username">irancell username</string>
    <string name="verification_code">verification code</string>
    <string name="resend_code">resend code</string>
    <string name="resend_code_number">code has been sent to your irancell number</string>
    <string name="action_logout">logout</string>
    <string name="action_dashboard">Dashboard</string>
    <string name="location">Location</string>
    <string name="site_address">Site Address</string>
    <string name="site_status">Site Status</string>
    <string name="site_code">Site Code</string>
    <string name="site_name">Site Name</string>
    <string name="email">email</string>
    <string name="search_in_web">search in web</string>
    <string name="save_modification">Do you want to save changes?</string>
    <string name="upload_modification">Do you want to upload changes?(please check your internet connection before uploading)</string>
    <string name="save">save</string>
    <string name="back">back</string>
    <string name="auto">auto</string>
    <string name="longitudeSemicolon">longitude:</string>
    <string name="latitudeSemicolon">latitude:</string>
    <string name="problematic">problematic</string>

    <string name="password">password</string>
    <string name="action_profile">Profile</string>
    <string name="name">name</string>
    <string name="identityCode">identity code</string>
    <string name="phone">phone</string>
    <string name="company">company</string>
    <string name="organization">organization</string>
    <string name="role">role</string>
    <string name="Scheduled">Scheduled</string>
    <string name="InProgress">InProgress</string>
    <string name="Visited">Visited</string>
    <string name="Problematic">Problematic</string>
    <string name="action_home">Home</string>
    <string name="EntranceImpossible">Sorry! we are unable to launch the application on this device!Please contact support Team.</string>
    <string name="UnderDev">This is under development!</string>
    <string name="auditSiteStates">Audit site states</string>
    <string name="upload">upload</string>
    <string name="clear">clear</string>
    <string name="networkCheck">please check your network connection</string>
    <string name="uploading">uploading…</string>
    <string name="networkError">Please check your network connection</string>
    <string name="successUpload">Information has been sent successfully!</string>
    <string name="successSave">Information has been saved successfully!</string>
    <string name="Audit">Audit</string>
    <string name="UnScheduled">UnScheduled</string>
    <string name="Confirmed">Confirmed</string>
    <string name="Rejected">Rejected</string>
    <string name="all">All</string>
    <string name="installation_type">Installation type</string>
    <string name="technologies">Technologies</string>
    <string name="please_wait">Please Wait…</string>
    <string name="high">high</string>
    <string name="medium">medium</string>
    <string name="low">low</string>
    <string name="imageQuality">imageQuality:</string>
    <string name="ReUploadImpossible">"You have already uploaded information</string>
    <string name="please_complete_following">Please complete following information</string>
    <string name="irancell_optimization_system">Irancell Optimization System</string>
    <string name="version">version:</string>
    <string name="unableToGetProfileDetails">Unable to get profile details right now!</string>
    <string name="gps_signal_lost">please,make sure your location is on</string>
    <string name="file_saved">File saved successfully!</string>
    <string name="Reported">Reported</string>
    <string name="routing">routing</string>



    //stitcher
    <string name="stitch_mode_scans">Scans</string>
    <string name="stitch_mode_panorama">Panorama</string>
    <string name="pick_images_button">Pick images</string>
    <string name="processing_images">Processing images</string>
    <string name="map_app_not_installed">There is no suitable application installed on your device</string>

</resources>