<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".presentation.main.fragment.SettingMainFragment"
        android:layout_width="match_parent"
        android:background="@color/medium_dark_blue"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout

            android:layout_margin="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/glass_background"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                style="@style/tv_setting_style"
                android:text="@string/language"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:layout_weight="2"
                android:orientation="horizontal"
                android:id="@+id/rg_languages"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/language">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_english"
                    android:buttonTint="@color/fullblack"

                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    style="@style/tv_setting_style"

                    />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:buttonTint="@color/fullblack"
                    android:id="@+id/rb_persian"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/persian"
                    style="@style/tv_setting_style"

                    />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout

            android:layout_margin="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/glass_background"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                style="@style/tv_setting_style"
                android:text="@string/imageQuality"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:layout_weight="3"
                android:orientation="horizontal"
                android:id="@+id/rg_quality"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/language">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_high"
                    android:buttonTint="@color/fullblack"

                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/high"
                    style="@style/tv_setting_style"

                    />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:buttonTint="@color/fullblack"
                    android:id="@+id/rb_medium"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/medium"
                    style="@style/tv_setting_style"

                    />
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:buttonTint="@color/fullblack"
                    android:id="@+id/rb_low"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/low"
                    style="@style/tv_setting_style"

                    />
            </RadioGroup>
        </LinearLayout>
        </LinearLayout>
        <FrameLayout
            android:background="@drawable/ios_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/imageSlider"
            android:layout_width="match_parent"
            app:layout_constraintHeight_percent="0.5"
            android:layout_height="0dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>