<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_blue"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.splash.SplashFragment">
    <FrameLayout
        android:id="@+id/lin_header"
        android:background="@drawable/header_background"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/mtni_black_en"
            android:layout_gravity="center"
            android:layout_width="@dimen/_98sdp"
            android:layout_height="@dimen/_93sdp"/>


    </FrameLayout>
<!--    <LinearLayout-->
<!--        android:background="@drawable/ios_background"-->
<!--        android:layout_gravity="bottom"-->
<!--        android:orientation="vertical"-->
<!--        android:layout_marginBottom="@dimen/_50sdp"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="@dimen/_300sdp"/>-->
    <LinearLayout
        android:layout_gravity="center"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">



    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="@dimen/_155sdp"
            android:layout_height="@dimen/_155sdp"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/network_yellow" />

        <TextView
            style="@style/tv_element_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14ssp" />


    </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_6sdp"
            style="@style/tv_element_style"
            android:text="@string/irancell_optimization_system"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout

        android:layout_marginTop="@dimen/_6sdp"
        android:layout_gravity="center|bottom"
        android:gravity="center"
        android:background="@drawable/bottom_otp_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            >
            <TextView
                style="@style/tv_detail_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/version"
                android:textColor="@color/black"
                />
            <TextView
                style="@style/tv_detail_style"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2sdp"
                android:text=" 1.0.0"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>