<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/dark_blue"
    android:layoutDirection="ltr"
    tools:context=".presentation.login.verifyotp.VerifyOtpFragment">

    <LinearLayout
        android:layout_weight="0.75"
        android:id="@+id/lin_header"
        android:background="@drawable/header_background"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ImageView
            android:src="@drawable/mtni_black_fa"
            android:layout_gravity="center"
            android:layout_width="@dimen/_98sdp"
            android:layout_height="@dimen/_93sdp"/>


    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:id="@+id/ios_logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp">
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        >
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="@dimen/_128sdp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:lottie_rawRes="@raw/network_yellow"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#FFBE00"
            style="@style/tv_element_style"

            android:text="@string/app_name"/>


    </FrameLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_weight="3"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ios_background"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ios_logo"
        android:id="@+id/lin_send_phone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="@dimen/_10sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="@dimen/_200sdp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_12sdp"
                android:background="@drawable/edit_text_background"
                android:elevation="@dimen/_9sdp"
                android:gravity="center">

                <EditText
                    android:id="@+id/et_username"
                    style="@style/tv_element_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/email"
                    android:maxLength="30"
                    android:padding="@dimen/_6sdp"
                    android:soundEffectsEnabled="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/hint"
                    android:textCursorDrawable="@drawable/cursor_shape"
                    android:textSize="@dimen/_13ssp"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/edit_text_background"
                android:elevation="@dimen/_9sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_password"
                    style="@style/tv_element_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="6"
                    android:background="@null"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:padding="@dimen/_6sdp"
                    android:soundEffectsEnabled="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/hint"
                    android:textCursorDrawable="@drawable/cursor_shape"
                    android:textSize="@dimen/_13ssp"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                <ImageView
                    android:id="@+id/img_showpass"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginRight="@dimen/_4sdp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_password_hide"
                    app:tint="@color/colorPrimary" />


            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_send_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout
                    android:id="@+id/lin_send_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:gravity="center"
                        android:text="@string/sendConfirmCode"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:elevation="@dimen/_12sdp"
            android:background="@drawable/bottom_otp_background"
            android:gravity="center_horizontal|bottom"
            android:layoutDirection="rtl"
            android:orientation="horizontal">
            <LinearLayout
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
                 >
                <TextView
                    style="@style/tv_detail_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_2sdp"
                    android:text=" 1.0.0"
                    android:textColor="@color/black" />
                <TextView
                    style="@style/tv_detail_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/version"
                    android:textColor="@color/black"
                    />
             </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>




</LinearLayout>